Refine the post about Microsoft Store

--- a/_posts/2026-01-27-ruby-4.0-available-in-microsoft-store.md
+++ b/_posts/2026-01-27-ruby-4.0-available-in-microsoft-store.md
@@ -9,7 +9,7 @@ Great news: Ruby is now installable through the Microsoft Store!
 
 Ruby can finally be installed on Windows per [one click](https://github.com/oneclick) in the [Microsoft Store](https://apps.microsoft.com/detail/xpfmdnmb4dq2wl).
 After download and installation there's a new folder at `C:/Ruby40-x64` which contains the Ruby binaries and sources as usual.
-The well known ruby tools, like `irb`, `gem`, `bundler` and `rake` are added to the PATH environment variable.
+The well known ruby tools, like `irb`, `gem`, `bundler` and `rake` are added to the PATH environment variable of the current user.
 
 A startmenu entry is added for "Ruby 4.0":
 
@@ -23,6 +23,18 @@ Here is the possibility to install MSYS2-Devkit, which is a precondition to inst
 
 Future patch versions of ruby-4.0.x will be distributed as app updates and can equally be installed through the store.
 Installed gems keep untouched in this case - only the ruby base installation is updated.
+
+It's also possible to install Ruby per winget command like so:
+```
+winget install "Ruby 4.0"
+```
+
+... and to remove it like so:
+```
+winget uninstall "Ruby 4.0.1-1-x64"
+```
+
+Currently only the package for x64 architecture is available, but the arm64 version is also on the way.
 
 The Ruby installed through the Microsoft Store is not special in any way.
 It's a normal user installation without Devkit, executed with user privileges.
