--- a/_posts/2026-01-27-ruby-4.0-available-in-microsoft-store.md
+++ b/_posts/2026-01-27-ruby-4.0-available-in-microsoft-store.md
@@ -38,10 +38,10 @@ Currently only the package for x64 architecture is available, but the arm64 vers
 
 The Ruby installed through the Microsoft Store is not special in any way.
 It's a normal user installation without Devkit, executed with user privileges.
-The following options are used:
+The following [options](https://github.com/oneclick/rubyinstaller2/wiki/FAQ#user-content-silent-install) are used:
 
 ```
 rubyinstaller-4.0.1-1-x64.exe /verysilent /currentuser /tasks=assocfiles,modpath
 ```
 
-These installer options are described [here](https://github.com/oneclick/rubyinstaller2/wiki/FAQ#user-content-silent-install).
+More help to installation issues is available in the [RubyInstaller wiki](https://github.com/oneclick/rubyinstaller2/wiki/Microsoft-%7C-Store).
