Update post about Microsoft Store regarding arm64

--- a/_posts/2026-01-27-ruby-4.0-available-in-microsoft-store.md
+++ b/_posts/2026-01-27-ruby-4.0-available-in-microsoft-store.md
@@ -34,11 +34,11 @@ winget install "Ruby 4.0"
 winget uninstall "Ruby 4.0.1-1-x64"
 ```
 
-Currently only the package for x64 architecture is available, but the arm64 version is also on the way.
+Both the packages for x64 and arm64 architectures are available and selected automatically.
 
 The Ruby installed through the Microsoft Store is not special in any way.
 It's a normal user installation without Devkit, executed with user privileges.
-The following [options](https://github.com/oneclick/rubyinstaller2/wiki/FAQ#user-content-silent-install) are used:
+The following options for [unattended installation](https://github.com/oneclick/rubyinstaller2/wiki/FAQ#user-content-silent-install) are used:
 
 ```
 rubyinstaller-4.0.1-1-x64.exe /verysilent /currentuser /tasks=assocfiles,modpath
